--- a/main_style.css
+++ b/main_style.css
@@ -82,14 +82,39 @@ footer {
 /* 제로웨이스트란? 페이지 */
 
 #title1 {
+    height: 200px;
     padding-left: 400px;
-    font-size:xx-large
+    font-size:xx-large;
+    line-height: 200px;
+    
+
 }
 #strong {
     color :darkgreen;
 }
 .body1 {
-    padding-left: 500px;
-    padding-bottom: 50px;;
+  
+    width: 1000px;
+    margin: 20px auto;
+    line-height: 2.0;
+    padding-bottom: 100px;;
 
+}
+#warning {
+    display: block;
+    margin: 0px auto;
+    width: 50%;
+}
+#pla {
+    display: block;
+    margin: 0px auto;
+    width: 50%;
+}
+#earth {
+    display: block;
+    margin: 0px auto;
+    width: 50%;
+}
+.text1{
+    text-align: center;
 }
