--- a/main_style.css
+++ b/main_style.css
@@ -10,7 +10,7 @@ ul {
 
     font-family: 'Do Hyeon', sans-serif;
     height: 15%;
-    margin-right: 40px;
+    margin: 7px;
     background-color: rgb(0, 0, 0);
     float: right;
     padding: 15px;
